# FLHookSDK

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
headers/: FLCoreServer.h  FLHook.h  plugin.h
include/: Action.hpp  Concepts.hpp  Deps.hpp  Enums.hpp  FLCoreCommon.h  FLCoreDACom.h  FLCoreDALib.h  FLCoreDefs.h  FLCoreFLServerEXE.h  FLCoreRemoteClient.h  FLCoreServer.h  FLHook.h  FLHook.hpp  FlPtr.hpp  Helpers.hpp  Hk.hpp  Macros.hpp  ResourcePtr.hpp  Serialization.hpp  Server.hpp  Singleton.hpp  Structs.hpp  Typedefs.hpp  __generated.h  plugin.h  plugin_comms.h  st6.h
include/Exceptions/: ErrorInfo.hpp  GameException.hpp  StopProcessingException.hpp  UnsupportedException.hpp
include/FLCore/: Common.hpp  FLCoreCommon.h  FLCoreDACom.h  FLCoreDALib.h  FLCoreDefs.h  FLCoreDefs.hpp  FLCoreFLServerEXE.h  FLCoreRemoteClient.h  FLCoreServer.h  HookedCall.h  ImportSdk.hpp  Server.hpp  st6.h
include/FLCore/Client/: CliEquip.hpp  CliGun.hpp
include/FLCore/Common/: BinarySearchTree.hpp  CArchGroup.hpp  CommonMethods.hpp  Damage.hpp  Enums.hpp  EquipDesc.hpp  Events.hpp  FmtStr.hpp  Fuse.hpp  Globals.hpp  GoodType.hpp  Goods.hpp  INI_Reader.hpp  MiscStructs.hpp  NewChar.hpp  Packets.hpp  PlayerData.hpp  Reputation.hpp  Strings.hpp  SubObjectID.hpp  Unknown.hpp  Watchable.hpp  XML.hpp
include/FLCore/DaLib/: Animation.hpp  Engine.hpp  Fl3d.hpp  RenderPipeline.hpp  Renderer.hpp
include/FLCore/Dacom/: Dacom.hpp  ICOManager.hpp  IProfileParser.hpp  IdaComponent.hpp  (+3 more)
include/Tools/: Deps.hpp  Enums.hpp  Hk.hpp  Macros.hpp  Serialization.hpp  Structs.hpp  Typedefs.hpp  Utils.hpp
include/Utils/: Detour.hpp  DynPatch.hpp  FileUtils.hpp  MemUtils.hpp  StringUtils.hpp  TemplateHelpers.hpp  TimeUtils.hpp  Utils.hpp
include/ext/: Sql.hpp
lib/: FLCoreCommon.lib  FLCoreDACom.lib  FLCoreDALib.lib  FLCoreFLServerEXE.lib  FLCoreRemoteClient.lib  FLCoreServer.lib  FLHook.lib
source/: Helpers.cpp  Hk.cpp  Sql.cpp
source/Freelancer/: SoundMan.cpp
(+160 files in other folders)
